# Deteccion_Facial

./: .env.example  .gitignore  GUIA_VIDEO.md  LICENSE  QUICKSTART.md  README.md  WINDOWS_SETUP.md  demo.py  emotion_results.json  pyproject.toml  requirements.txt  run.py  test_emotion.py  test_with_video.sh
src/: config.py  generate_json.py  main.py
src/api/: server.py
src/video/: capture.py
src/vision/: detect.py  embed.py  emotion.py  reid.py  track.py
