[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face-pipeline"
version = "0.1.0"
description = "Face detection and tracking pipeline with re-identification"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "loguru>=0.6.0",
    "insightface>=0.7.0",
    "onnxruntime>=1.12.0",
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.20.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
gpu = [
    "onnxruntime-gpu>=1.12.0",
]

[project.scripts]
face-pipeline = "src.main:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
